feat: 커스텀 구분자 기능 구현
- 커스텀 구분자는 문자열 앞 부분에 "//" "\n" 사이에 위치
- 커스텀 구분자를 추가하는 입력인지 판별하기 위해 정규표현식 사용